# steam-workshop-downloader

./: .editorconfig  .gitignore  README.md  gen_changelog.py  main.py  make.py  make_archive.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  update.py
.github/workflows/: python-app.yml
config/: civilization6.json  civilization6.yml  example.json  example.yml
src/: cache.py  config.py  downloader.py  game_cfg.py  list_config.py  logging.py  utils.py  validators.py
tests/: cache.json  test_cache.py  test_mod_id.py  test_mod_info.py
